notifications module (standalone, only in chat for now)

--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_item.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_item.html.twig
@@ -1,6 +1,8 @@
-<a href="#" class="media list-group-item">
+<a href="#" data="notification" class="media list-group-item">
   <span class="media-body block m-b-none">
-    <%= title %><br>
-    <small class="text-muted">notification.date</small>
+    <%= title %>
+    <span class="conversation-name"><%= name %></span>
+    <br>
+    <small class="text-muted"><%= msg %></small>
   </span>
 </a>
