--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -225,28 +225,25 @@ LIVE CHAT
   width: 10px;
 }
 
-.answered {
-  background: #31bf7a;
+.conversation-header .icon-stop:before {
+  font-size: 10px;
 }
 
-.text-answered {
+.answered {
+  background: #31bf7a;
   color: #31bf7a;
 }
 
 .unanswered {
   background: #f8ca12;
-}
-
-.urgent {
-  background: #e74c3c !important;
-}
-
-.text-urgent {
-  color: #e74c3c !important;
-}
-
-.text-unanswered {
   color: #f8ca12;
+}
+
+.urgent, 
+.answered.urgent, 
+.unanswered.urgent {
+  background: #e74c3c;
+  color: #e74c3c;
 }
 
 .sell-opportunity {
