--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
@@ -179,11 +179,15 @@
 <section class="questions-wrapper">
   <section class="hbox stretch bg-white">
     <aside class="js-skeleton-list">
-      <ul class="js-questions-list list-group list-group-alt no-radius">
-      <!--
-    	  Our sorted questions list
-      -->
-      </ul>
+      <section class="vbox">
+        <section class="scrollable">
+          <ul class="js-questions-list list-group list-group-alt no-radius">
+          <!--
+        	  Our sorted questions list
+          -->
+          </ul>
+        </section>
+      </section>
       <div class="text-center wrapper">
         <i class="icon-spinner icon-spin icon-large hide"></i>
       </div>
