--- a/src/Lily/HomePageBundle/Resources/views/fr/layout.html.twig
+++ b/src/Lily/HomePageBundle/Resources/views/fr/layout.html.twig
@@ -2,14 +2,14 @@
 <html>
 
   <head>
-
+  
 	<meta charset="utf-8">
 	<title>{% block title %}Lily, l'agent virtuel mobile - SAIO{% endblock %}</title>
-
+	
 	<link rel="icon" type="image/png" href="{{ asset('images/home/favicon-saio.png') }}">
-
+	
 	{% block stylesheets %}
-
+	
 	<!--[if lt IE 9]>
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
       <script src="{{ asset('js/home/html5shiv.js') }}"></script>
@@ -19,26 +19,27 @@
       <!--[if IE]>
       <link type="text/css" rel="stylesheet" href="{{ asset('css/home/style-ie.css') }}" />
     <![endif]-->
-
+    
     {% endblock %}
-
+    
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1" />
     <meta name="keywords" content="SAIO, Lily, SAIO Lily, agent virtuel, l'agent virtuel mobile, agent virtuel mobile, stratégie multi-canal, stratégie cross-canal"/>
     <meta name="description" content="Nous proposons une solution logicielle innovante vous permettant de communiquer en mode one to one avec vos clients et prospects via une boîte de dialogue disponible sur tous vos médias web. Ce dialogue est automatisé lorsque le cas est simple et fréquent grâce à l’agent virtuel. Quand le cas est complexe l’agent virtuel redirige son interlocuteur vers votre équipe de support qui prend le relais. L’interlocuteur reste libre dans le choix du canal de communication et peut escalader via chat, mail, téléphone ou encore web call-back."/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:image" content="http://www.saio.fr/web/images/home/woman.jpg" />
+    <meta name="google-site-verification" content="PfKsglMViT9kYhDpEKv9vii1NPltCFrLpixplD04FbE" />
 
   </head>
 
     <body>
-
+    
         {% include "LilyHomePageBundle:fr:header.html.twig" %}
-
+        
         {% block content %}
-
+		
 		{% endblock %}
-
+    	
 		{% include "LilyHomePageBundle:fr:footer.html.twig" %}
 
 	<script src="{{ asset('js/vendor/jquery.min.js') }}"></script>
@@ -49,16 +50,22 @@
 	<!-- [if lt IE 9]>
 		<script src="{{ asset('js/ie/respond.min.js') }}"></script>
 	<![endif]-->
+	
+	<!--
+	<script type="text/javascript">
+	
+		var licence = '53982388c0bf0';
+		var locale = 'fr';
+		(function() {
+			var lily = document.createElement('script'); lily.type = 'text/javascript'; lily.async = true;
+			lily.src = '{{ app.request.getSchemeAndHttpHost() }}/' + locale + '/api/tracking/' + licence;
+			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lily, s);
+			})();
+	
+	</script>
+	-->
 
-  <script type="text/javascript">
-   (function() {
-     var licence = '54b7873b88c42';
-     var lily = document.createElement('script'); lily.type = 'text/javascript'; lily.async = true;
-     lily.src = 'http://saio.fr/app/tracking/' + licence;
-     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(lily, s);
-  })();
-  </script>
-
+<!--
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -67,8 +74,9 @@
 
 	  ga('create', 'UA-42907567-1', 'saio.fr');
 	  ga('send', 'pageview');
-	</script>
 
+	</script>
+-->
 
 	</body>
 
