several knowledge bug fixes

--- a/src/Lily/KnowledgeBundle/Resources/views/Categories/category.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Categories/category.html.twig
@@ -4,7 +4,7 @@
   </span>
   <ul class="dropdown-menu">
 		<li>
-		  <a class="btn-add-child" href="#">Ajouter une catégorie enfant</a>
+		  <a class="btn-add-child" href="#">Ajouter un enfant</a>
 		</li>
 		<li>
 		  <a class="btn-update" href="#">Modifier</a>
