--- a/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Categories/edit.html.twig
@@ -27,6 +27,6 @@
     Annuler
   </button>
   <button type="button" class="btn btn-primary btn-update">
-    Ajouter
+    Sauvegarder
   </button>
 </div>
