--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/Edit/skeleton.html.twig
@@ -4,8 +4,8 @@
     <li class="versions-nav"><a href="#chat">Versions</a></li>
   </ul>
 </header>
-<section class="scrollable w-f">
-  <ul class="js-question-tree wrapper">
+<section class="w-f">
+  <ul class="js-question-tree wrapper scrollable">
     <!--
       Here goes our questions/precisions/action/answer list
      -->
