--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/skeleton.html.twig
@@ -1,4 +1,4 @@
-<header class="bg-light dker header no-padder clearfix">
+<header class="bg-light header no-padder clearfix">
 
   <div class="lvl-one clear">
 
@@ -114,6 +114,7 @@
   	<!--
     	Label button
     -->
+    <!--
   	<div class="btn-group btn-group-labels">
   
   		<button class="btn btn-sm dropdown-toggle btn-filter" data-toggle="dropdown">
@@ -126,6 +127,7 @@
   		</ul>
   
   	</div>
+    -->
   
   	
   	<!--
