--- a/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/index.html.twig
@@ -71,12 +71,14 @@
             </li>
           </ul>
         </header>
-        <section class="scrollable categories">
-          <ul class="js-categories-list">
-            <!--
-              Here goes questions' categories
-            -->
-          </ul>
+        <section class="categories">
+          <section class="categories-wrapper">
+            <ul class="scrollable js-categories-list">
+              <!--
+                Here goes questions' categories
+              -->
+            </ul>
+          </section>
         </section>
       </section>
     </aside>
