--- a/src/Lily/KnowledgeBundle/Resources/views/Questions/question.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Questions/question.html.twig
@@ -1,14 +1,18 @@
-<div class="checkbox">
-  <input type="checkbox" data-id="<%= id %>" name="select">
+<div class="item-wrapper">
+  <div class="item">
+    <div class="checkbox">
+      <input type="checkbox" data-id="<%= id %>" name="select">
+    </div>
+    <% if (category) { %>
+      <span class="category-label bg-dark lter">
+        <i class="icon-folder-open-alt"></i>
+        <%= category.title %>
+      </span>
+    <% } %>
+    <h5 class="title"><%= title %></h5>
+    <span class="informations">
+      Posée <%= requests %> fois - Modifié le 
+      <%= moment(date).format('DD/MM/YY') %> par <%= modifiedBy %>
+    </span>
+  </div>
 </div>
-<% if (category) { %>
-  <span class="category-label bg-dark lter">
-    <i class="icon-folder-open-alt"></i>
-    <%= category.title %>
-  </span>
-<% } %>
-<h5 class="title"><%= title %></h5>
-<span class="informations">
-  Posée <%= requests %> fois - Modifié le 
-  <%= moment(date).format('DD/MM/YY') %> par <%= modifiedBy %>
-</span>
