--- a/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Admin/index.html.twig
@@ -29,8 +29,7 @@
           </ul>
         </header>
         <section>
-          <section class="js-users-container hbox stretch"></section>
-          <section class="js-groups-container hbox stretch" tabindex="-1"></section>
+          <section class="js-skeleton-container hbox stretch"></section>
         </section>
   	  </section>
 	  </section>
