--- a/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Dashboard/index.html.twig
@@ -74,7 +74,7 @@
 	{% block bootstrap %}
     {% autoescape false %}
       <script type="text/javascript">
-  	    var config = {};
+        var config = window.config || {};
         config.root = '{{ app.request.getBaseURL() }}/lily/api/statistics';
         config.client = JSON.parse('{{ client | serialize('json') | raw }}');
         config.userId = '{{ app.user.id }}';
