--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_list.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_list.html.twig
@@ -1,7 +1,7 @@
-<a href="#" class="dropdown-toggle dk" data-toggle="dropdown">
-  <i class="icon-bell-alt text-white"></i>
+<a href="#" class="dropdown-toggle header-widget-link" data-toggle="dropdown">
+  <i class="notifications-icon icon-bell-alt"></i>
   <% if (count > 0) { %>
-  <span class="badge up bg-danger m-l-n-sm"><%= count %></span>
+  <span class="notifications-count alert-badge"><%= count %></span>
   <% } %>
 </a>
 <section class="dropdown-menu animated fadeInUp input-s-lg">
