--- a/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Faq/index.html.twig
@@ -99,7 +99,7 @@
   {% autoescape false %}
 
   <script type="text/javascript">
-    var config = {};
+    var config = window.config || {};
     config.root = '{{ app.request.getBaseURL() }}/lily/api';
     {% if app.environment == 'dev' %}
     config.wsserver = 'ws://develop.saio.fr';
