--- a/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
+++ b/src/Lily/UserBundle/Resources/views/Profile/index.html.twig
@@ -72,7 +72,7 @@
   {% block bootstrap %}
     {% autoescape false %}
       <script type="text/javascript">
-        var config = {};
+        var config = window.config || {};
         config.root = '{{ app.request.getBaseURL() }}/lily/api';
         config.userId = '{{ app.user.id }}';
         {% if app.environment == 'dev' %}
