--- a/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
+++ b/src/Lily/KnowledgeBundle/Resources/views/Redirections/index.html.twig
@@ -90,7 +90,7 @@
 	{% block bootstrap %}
     {% autoescape false %}
       <script type="text/javascript">
-        var config = {};
+        var config = window.config || {};
         config.root = '{{ app.request.getBaseURL() }}/lily/api';
         {% if app.environment == 'dev' %}
         config.wsserver = 'ws://develop.saio.fr';
