--- a/src/Lily/ChatBundle/Resources/views/index.html.twig
+++ b/src/Lily/ChatBundle/Resources/views/index.html.twig
@@ -21,45 +21,24 @@
 
 	{% block content %}
 	
-	<section>
-	  <section class="js-skeleton-container vbox">
-    <!--
-      Here start our application
-      Main Skelton View
-    -->  	  
-	  </section>
-	</section>
+  	<section>
+  	  <section class="js-skeleton-container vbox">
+        <header class="header bg-dark lter bg-gradient">
+          <ul class="nav nav-tabs">
+            <li class="dashboard-nav"><a href="#dashboard">Dashboard</a></li>
+            <li class="shorcut-nav"><a href="#shorcut">Message pré-enregistré</a></li>
+          </ul>
+        </header>
+        <!--
+          Here start our application
+          Main Skelton View
+        -->  	  
+  	  </section>
+  	</section>
 
 	{% endblock %}
 	
 	{% block templates %}
-		<script type="text/template" id="skeletonTpl">
-      {% include 'LilyChatBundle::skeleton.html.twig' %}
-    </script>
-    <!-- 
-  		  Live
-    -->
-		<script type="text/template" id="liveSkeletonTpl">
-      {% include 'LilyChatBundle:Live:skeleton.html.twig' %}
-    </script>
-		<script type="text/template" id="liveConversationTpl">
-      {% include 'LilyChatBundle:Live:conversation.html.twig' %}
-    </script>
-		<script type="text/template" id="liveInformationsTpl">
-      {% include 'LilyChatBundle:Live:informations.html.twig' %}
-    </script>
-		<script type="text/template" id="liveRecordTpl">
-      {% include 'LilyChatBundle:Live:record.html.twig' %}
-    </script>
-		<script type="text/template" id="liveMessageOperatorTpl">
-      {% include 'LilyChatBundle:Live/Message:operator.html.twig' %}
-    </script>
-		<script type="text/template" id="liveMessageServerTpl">
-      {% include 'LilyChatBundle:Live/Message:server.html.twig' %}
-    </script>
-		<script type="text/template" id="liveMessageVisitorTpl">
-      {% include 'LilyChatBundle:Live/Message:visitor.html.twig' %}
-    </script>
     <!-- 
   		  Dashboard
     -->
@@ -81,6 +60,18 @@
 		<script type="text/template" id="dashboardVisitorsTpl">
       {% include 'LilyChatBundle:Dashboard:visitors.html.twig' %}
     </script>
+    <!-- 
+  		  Shortcuts
+    -->
+		<script type="text/template" id="shortcutsSkeletonTpl">
+      {% include 'LilyChatBundle:Shortcuts:skeleton.html.twig' %}
+    </script>
+		<script type="text/template" id="shortcutsEditTpl">
+      {% include 'LilyChatBundle:Shortcuts:edit.html.twig' %}
+    </script>
+		<script type="text/template" id="shortcutsItemTpl">
+      {% include 'LilyChatBundle:Shortcuts:item.html.twig' %}
+    </script> 
     <!-- 
   		  Modals
     -->
