--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_list.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Notifs/notif_list.html.twig
@@ -1,9 +1,11 @@
-<a href="#" class="dropdown-toggle header-widget-link" data-toggle="dropdown">
-  <i class="notifications-icon icon-bell-alt"></i>
+<!-- <a href="#" class="dropdown-toggle header-widget-link" data-toggle="dropdown" > -->
+<a href="javascript:;" class="dropdown-toggle header-widget-link">
+  <i class="notifications-icon icon-comments-alt"></i>
   <% if (count > 0) { %>
   <span class="notifications-count alert-badge"><%= count %></span>
   <% } %>
 </a>
+
 <section class="dropdown-menu animated fadeInUp input-s-lg">
   <section class="panel bg-white">
     <header class="panel-heading">
