--- a/web/css/backoffice/chat.css
+++ b/web/css/backoffice/chat.css
@@ -1,23 +1,21 @@
 /* =======================================================================================
 LIVE CHAT
 =======================================================================================================*/
-
-.live-nav.active a {
-  background: #528DC3 !important;
-  color: #f2f2f2 !important;
-}
-
-.messages-list a {
+.conversation-section-list a {
   text-decoration: underline;
   font-weight: 600;
 }
 
-.msg .avatar-thumb {
+.conversation-section-item .avatar-thumb {
   height: 36px;
 }
 
 .operator-connected-list .thumb-sm {
   text-align: center;
+}
+
+.js-main-container i {
+  font-weight: bold !important;
 }
 
 .conversations {
@@ -32,18 +30,61 @@ LIVE CHAT
   float: left;
 }
 
-.conversations-list {
+.live-nav.active a {
+  background: #528DC3 !important;
+  color: #f2f2f2 !important;
+}
+
+.aside-chat-left {
   width: 275px;
   position: absolute;
   z-index: 4;
+  border-radius: 4px 0 0 4px;
 }
 
-.conversation-infos-container {
+.aside-chat-right {
   width: 50px;
+  border-radius: 4px 4px 0 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+
+.chat-header {
+  background: #6075a4;
+}
+
+.chat-message-show{
+  -webkit-animation: showFromBottom .3s ease both;
+  -moz-animation: showFromBottom .3s ease both;
+  animation: showFromBottom .3s ease both;
 }
 
 .conversation-header {
   background: #eaecf0;
+}
+
+.header-control {
+  display: inline-block;
+  padding: 10px 0;
+}
+
+.header-control a i {
+  font-size: 20px;
+  color: #f9f9f9;
+  line-height: 30px;
+}
+
+.header-control button {
+  background: #565f71;
+  box-shadow: 3px 3px 1px -2px #454d5f;
+  outline: none;
+  color: #f9f9f9;
+  font-size: 12px;
+  margin-right: 5px;
+}
+
+.header-control button:hover, .header-control button:focus {
+  color: white;
 }
 
 .dropdown-menu li.active a {
@@ -61,25 +102,35 @@ LIVE CHAT
   left: auto;
 }
 
-.windows .dropdown-menu a, .status-selector .dropdown-menu a {
+.windows .dropdown-menu a, .status .dropdown-menu a {
   color: #999999;
 }
 
-.windows .dropdown-menu a:hover, .status-selector .dropdown-menu a:hover {
+.windows .dropdown-menu a:hover, .status .dropdown-menu a:hover {
   background: #f3f5f9;
   color: #999999;
 }
 
-.status-selector button .icon-stop {
+.status {
+  width: 11px;
+  height: 11px;
+  display: inline-block;
+}
+
+.status:before {
+  margin: 0;
+}
+
+.status-button .icon-stop {
   font-size: 11px;
   margin-right: 3px;
 }
 
-.status-selector button .available {
+.status-button .available {
   color: #31bf7a;
 }
 
-.status-selector button .unavailable {
+.status-button .unavailable {
   color: #ff6455;
 }
 
@@ -188,12 +239,12 @@ LIVE CHAT
   width: 10px;
 }
 
-.conversation-header .icon-stop:before {
-  font-size: 10px;
-}
-
 .answered {
   background: #31bf7a;
+  color: #31bf7a;
+}
+
+.text-answered {
   color: #31bf7a;
 }
 
@@ -202,11 +253,17 @@ LIVE CHAT
   color: #f8ca12;
 }
 
-.urgent, 
-.answered.urgent, 
-.unanswered.urgent {
-  background: #e74c3c;
-  color: #e74c3c;
+.urgent {
+  background: #e74c3c !important;
+  color: #e75c3c;
+}
+
+.text-urgent {
+  color: #e74c3c !important;
+}
+
+.text-unanswered {
+  color: #f8ca12;
 }
 
 .sell-opportunity {
@@ -270,7 +327,7 @@ LIVE CHAT
   width: 500px;
   top: calc(50% - 100px) !important;
   left: calc(50% - 250px) !important;
-  z-index: 10001;
+  z-index: 9999;
   outline: 0;
 }
 
@@ -281,7 +338,7 @@ LIVE CHAT
   height: 400px;
   top: calc(50% - 50px) !important;
   left: calc(50% - 250px) !important;
-  z-index: 10001;
+  z-index: 9999;
   opacity: 1;
 }
 
@@ -371,7 +428,7 @@ LIVE CHAT
 }
 
 .conversation-close:hover, .ban:hover, .transfer:hover {
-	color: #576064;
+  color: #576064;
 }
 
 .conversation-header-control .transfer, .ban {
@@ -395,27 +452,27 @@ LIVE CHAT
   resize: none;
 }
 
-.messages-list-container {
+.conversation-section {
   padding: 20px;
   margin-bottom: 180px;
 }
 
-.messages-list {
+.conversation-section-list {
   padding: 0;
 }
 
-.messages-list li {
+.conversation-section-list li {
   display: block;
 }
 
-.msg img.img-circle {
+.conversation-section-item img.img-circle {
   width: 35px;
   height: 35px;
   margin-left: 5px;
   float: left;
 }
 
-.msg p.msg-visitor {
+.conversation-section-item p.msg-visitor {
   padding-right: 15px;
   text-align: right;
   font-size: 12px;
@@ -426,12 +483,12 @@ LIVE CHAT
   word-wrap: break-word;
 }
 
-.msg p.msg-visitor .date {
+.conversation-section-item p.msg-visitor .date {
   color: #d6d6d6;
   font-weight: 300;
 }
 
-.msg p.msg-operator {
+.conversation-section-item p.msg-operator {
   border-left: 2px solid #6e7d83;
   font-size: 12px;
   min-height: 35px;
@@ -443,12 +500,12 @@ LIVE CHAT
   border-left: 0 !important;
 }
 
-.msg p span {
+.conversation-section-item p span {
   color: #d6d6d6;
   display: block;
 }
 
-.messages-list-container p.msg-server {
+.conversation-section p.msg-server {
   border-bottom: 1px dotted #a9abb1;
   padding-bottom: 8px;
   margin-bottom: 20px;
@@ -595,12 +652,6 @@ LIVE CHAT
   line-height: 30px;
 }
 
-.chat-message-show{
-  -webkit-animation: showFromBottom .3s ease both;
-  -moz-animation: showFromBottom .3s ease both;
-  animation: showFromBottom .3s ease both;
-}
-
 @media (max-width: 767px) {
 
   .aside-chat-left {
@@ -608,7 +659,7 @@ LIVE CHAT
   }
 
   .list-record-item .informations {
-  	width: 100%;
+    width: 100%;
     max-width: -moz-calc(100% - 130px);
     max-width: -webkit-calc(100% - 130px);
     max-width: -o-calc(100% - 130px);
@@ -622,7 +673,7 @@ LIVE CHAT
     height: 100%;
     top: 0 !important;
     left: 0 !important;
-    z-index: 10001;
+    z-index: 9999;
   }
 
   body.modal-open, .modal-open .navbar-fixed-top, .modal-open .navbar-fixed-bottom {
@@ -630,13 +681,13 @@ LIVE CHAT
   }
 
   .modal-content {
-	  height: 100%;
+    height: 100%;
     border: 0;
     border-radius: 0;
   }
 
   .modal-footer {
-	  position: absolute;
+    position: absolute;
     bottom: 0;
   }
 
