fonctioning multi chat feature

--- a/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/layout.html.twig
@@ -17,7 +17,7 @@
   'css/vendor/plugin.css'
   'css/vendor/app.css'
   'css/backoffice/main.css'
-  'css/backoffice/chat.css'
+  'css/components/chat.css'
 
 filter='cssrewrite' %}
 
