--- a/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
+++ b/src/Lily/BackOfficeBundle/Resources/views/Utils/Chat/skeleton.html.twig
@@ -5,8 +5,22 @@
     <section class="vbox">
       <section class="scrollable">
         <header class="header-queue">
+
           <h5>CONVERSATIONS</h5>
+
+          <div class="btn-group windows windows-selector">
+            <button class="btn btn-sm dropdown-toggle" data-toggle="dropdown">
+              <span class="dropdown-label">1 conversation</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li class="active"><a href="#" data="1">1 conversation</a></li>
+              <li><a href="#" data="2">2 conversations</a></li>
+              <li><a href="#" data="4">4 conversations</a></li>
+            </ul>
+          </div>
+
         </header>
+
         <div class="header-current" data-toggle="collapse" data-target=".list-current">
           <h5>EN COURS</h5>
           <span class="badge bg-default pull-right">0</span>
